crates/runtime/tests/search/snapshots/integration_models__search__arrow-no_vector_engine-view_union_all_join-vector_search_metadata_megascience_vector_search_sql_filtered_index_only_explain.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT id, trunc(_score, 3) as _score FROM vector_search(qs, 'secondary', answer, 4) WHERE subject != 'math' ORDER BY _score DESC, id"
---
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                 |
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: _score DESC NULLS FIRST, vector_search(qs, Utf8("secondary"), answer, Int64(4)).id ASC NULLS LAST                                                                                                                              |
|               |   Projection: vector_search(qs, Utf8("secondary"), answer, Int64(4)).id, trunc(vector_search(qs, Utf8("secondary"), answer, Int64(4))._score, Int64(3)) AS _score                                                                    |
|               |     TableScan: vector_search(qs, Utf8("secondary"), answer, Int64(4)) projection=[id, _score], full_filters=[vector_search(qs, Utf8("secondary"), answer, Int64(4)).subject != Utf8("math")]                                         |
| physical_plan | SortPreservingMergeExec: [_score@1 DESC, id@0 ASC NULLS LAST]                                                                                                                                                                        |
|               |   SortExec: expr=[_score@1 DESC, id@0 ASC NULLS LAST], preserve_partitioning=[true]                                                                                                                                                  |
|               |     ProjectionExec: expr=[id@0 as id, trunc(_score@1, 3) as _score]                                                                                                                                                                  |
|               |       SortExec: TopK(fetch=4), expr=[_score@1 DESC NULLS LAST], preserve_partitioning=[true]                                                                                                                                         |
|               |         ProjectionExec: expr=[id@0 as id, 1 - cosine_distance(CAST(query_vector() AS List(Field { data_type: Float32, nullable: true })), CAST(answer_embedding@2 AS List(Field { data_type: Float32, nullable: true }))) as _score] |
|               |           RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                                                                       |
|               |             FilterExec: subject@1 != math                                                                                                                                                                                            |
|               |               SchemaCastScanExec                                                                                                                                                                                                     |
|               |                 BytesProcessedExec                                                                                                                                                                                                   |
|               |                   DataSourceExec: partitions=1, partition_sizes=[2]                                                                                                                                                                  |
|               |                                                                                                                                                                                                                                      |
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
